--- a/style.css
+++ b/style.css
@@ -1,3 +1,19 @@
 * {
     font-family: 'Times New Roman', Times, serif;
 }
+
+#mainContainer {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    border: 1px solid black;
+    padding: 20px;
+    margin: 10px;
+}
+
+#customers {
+    flex: 1 1 180px;
+    border: 1px solid black;
+    padding: 15px;
+    margin: 10px;
+}
